# lab-09-producer-consumer

./: .travis.yml  CMakeLists.txt  README.md  isi_run
include/: ctpl.h  header.hpp  root_certificates.hpp
scripts/: checks.sh
sources/: source.cpp
tests/: test.cpp
